Fix overflow in responsive navigation

--- a/styles/site.css
+++ b/styles/site.css
@@ -102,7 +102,23 @@ p {
 
   .site-nav.responsive {
     position: sticky;
-    flex-direction: column;
+    /*flex-direction: column;*/
+    /*align-items: stretch;*/
+    flex-flow: row wrap;
+    width: 100vw;
+  }
+
+  .site-nav.responsive > * {
+    flex: 1 100%;
+  }
+
+  .site-nav.responsive a {
+    display: block;
+    text-align: left;
+    /*width: 80vw;*/
+    /*margin: 0;*/
+    /*width: 85%;*/
+    /*margin: auto;*/
   }
 
   .site-nav.responsive a.current {
@@ -111,16 +127,11 @@ p {
 
   .site-nav.responsive a.icon {
     position: absolute;
+    margin: 0;
     right: 0;
     top: 0;
     width: 2.5rem;
     text-align: center;
-  }
-
-  .site-nav.responsive a {
-    display: block;
-    text-align: left;
-    width: 100vw;
   }
 }
 
